<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unipi.masss.ui.home.HomeFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_mon_btn"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:backgroundTint="#FF0000"
        app:cornerRadius="100dp"
        app:icon="@drawable/mic"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:contentDescription="@string/recording_service_btn_desc"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/manual_sos_btn"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/sends_manual_sos"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/sos"
        android:textSize="30sp"
        app:backgroundTint="#FF0000"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754"/>


</androidx.constraintlayout.widget.ConstraintLayout>